Menambahkan beberapa falidasi untuk logbook
